--- a/php.ini
+++ b/php.ini
@@ -694,7 +694,7 @@ error_log =  "C:\xampp\php\logs\php_error_log"
 ; Development Value: "GPCS"
 ; Production Value: "GPCS";
 ; http://php.net/variables-order
-variables_order = "GPCS"
+variables_order = "EGPCS"
 
 ; This directive determines which super global data (G,P,C,E & S) should
 ; be registered into the super global array REQUEST. If so, it also determines
